--- a/Module 4/index.html
+++ b/Module 4/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-<a href="https://shkolladigitale.com" target="_blank">Shkolla Digitale</a>
+<a href="https://shkolladjigitale.com" target="_blank">Shkolla Digitale</a>
 
 <br>
 
@@ -18,6 +18,80 @@
 <hr>
 
 <img src="images/houses.gif" alt="This is a Gif" width="250" height="250">
+
+
+<a href="#heading_nr1">Go to first Heading</a> 
+<a href="#heading_nr2">Go to second Heading</a>
+<a href="#heading_nr3">Go to third Heading</a>
+<h1 id="heading_nr1" > This is my first heading </h1>
+
+    <br>
+
+    <img src="images/programming_1.jpg" width="400px" height="400px">
+
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet pariatur quos accusantium vel 
+        minus in qui aspernatur voluptatem excepturi 
+        nisi voluptatibus doloremque, libero hic. Laborum hic nesciunt pariatur repudiandae soluta!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt ipsa deserunt quod v
+        eniam excepturi repellat labore, eos totam, eaque omnis, 
+        tempore commodi hic eius! Eligendi dignissimos beatae aperiam eum et.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi numquam omnis blanditiis
+         voluptatum recusandae quisquam et porro officiis? Ut, 
+        fugiat laboriosam perspiciatis est et soluta necessitatibus? Modi aspernatur provident voluptatum.
+    </p>
+
+    <hr>
+
+<h1 id="heading_nr2" > This is my second heading </h1>
+
+    <br>
+
+    <img src="images/programming_2.jpg" width="400px" height="400px">
+
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet pariatur quos accusantium vel 
+        minus in qui aspernatur voluptatem excepturi 
+        nisi voluptatibus doloremque, libero hic. Laborum hic nesciunt pariatur repudiandae soluta!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt ipsa deserunt quod v
+        eniam excepturi repellat labore, eos totam, eaque omnis, 
+        tempore commodi hic eius! Eligendi dignissimos beatae aperiam eum et.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi numquam omnis blanditiis
+         voluptatum recusandae quisquam et porro officiis? Ut, 
+        fugiat laboriosam perspiciatis est et soluta necessitatibus? Modi aspernatur provident voluptatum.
+    </p>
+
+    <hr>
+
+<h1 id="heading_nr3" > This is my third heading </h1>
+
+    <br>
+
+    <img src="images/programming_3.jpg" width="400px" height="400px">
+
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet pariatur quos accusantium vel 
+        minus in qui aspernatur voluptatem excepturi 
+        nisi voluptatibus doloremque, libero hic. Laborum hic nesciunt pariatur repudiandae soluta!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt ipsa deserunt quod v
+        eniam excepturi repellat labore, eos totam, eaque omnis, 
+        tempore commodi hic eius! Eligendi dignissimos beatae aperiam eum et.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi numquam omnis blanditiis
+         voluptatum recusandae quisquam et porro officiis? Ut, 
+        fugiat laboriosam perspiciatis est et soluta necessitatibus? Modi aspernatur provident voluptatum.
+    </p>
+
+    <hr>
+
+
+<a href="https://shkolladigjitale.com"> <img src="images/ds_logo.png" alt="Houses"></a>
+<br>
+
+<a href="mailto:info@shkolla.digjitale">Send Email</a>
+
+<br>
+
+<a href="tel:+383123456">Call +383123456</a>
 
 
 
